# scripts

./: .buildinfo  audiotag.html  finreport.html  flac2mp3.html  genindex.html  index.html  modules.html  objects.inv  pdfmgr.html  portmgr.html  py-modindex.html  quote.html  requirements.txt  search.html  searchindex.js  test.html  tic_tac_toe.html  txt2mp3.html  utils.html  vmgr.html  vocab.html  zipall.html
.github/workflows/: python-app.yml  release-quote.yml  release-vocab.yml  sphinx.yml
_modules/: finreport.html  flac2mp3.html  index.html  pdfmgr.html  quote.html  tic_tac_toe.html  txt2mp3.html  utils.html  vmgr.html  vocab.html  zipall.html
_modules/test/: test_quote.html  test_vocab.html  test_zipall.html
_sources/: audiotag.rst.txt  finreport.rst.txt  flac2mp3.rst.txt  index.rst.txt  modules.rst.txt  pdfmgr.rst.txt  portmgr.rst.txt  txt2mp3.rst.txt  vmgr.rst.txt  vocab.rst.txt  zipall.rst.txt
docker/quote/: Dockerfile
docker/vocab/: Dockerfile
docs/: conf.py  modules.rst  quote.rst  test.rst
src/: audiotag.py  cleanjf.py  dngconvert.py  finreport  finreport.py  flac2mp3  flac2mp3.py  four_in_a_row.py  framecpy.py  launcher  markdown.py  mobilemgr.py  mosaic  mosaic.py  pdfmgr  pdfmgr.py  pfrmcpy  portmgr.py  pyproject.toml  quote  quote.py  raw2dng.py  readme.md  rooncpy  rubix.py  software.py  stocks.py  tic_tac_toe.py  txt2mp3.py  vmgr  vmgr.py  vocab  vocab.py  zipall.py
src/config/: Quotes.md  dngconvert.json  finreport.json  mobilemgr.json  pfrmcpy.json  raw2dng.json  vmgr.json  vocabulary.yaml
src/test/: __init__.py  pytest.ini  test_quote.py  test_vocab.py  test_zipall.py
src/utils/: __init__.py  roman.py
