[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.3",
    "magickwand>=0.2",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pycryptodome>=3.23.0",
    "pydngconverter>=0.3.0",
    "pypdf2>=3.0.1",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "wand>=0.6.13",
]
