[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastprogress>=1.0.3",
    "gtts>=2.5.4",
    "iptcinfo3>=2.1.4",
    "loguru>=0.7.3",
    "magickwand>=0.2",
    "matplotlib>=3.10.7",
    "mutagen>=1.47.0",
    "numpy>=2.3.2",
    "patool>=4.0.1",
    "pillow>=11.3.0",
    "pycryptodome>=3.23.0",
    "pydngconverter>=0.3.0",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "pyunpack>=0.3",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
    "wand>=0.6.13",
    "yfinance>=0.2.66",
]
